src/objects/Community_Registration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>All settings related to the Registration Process for the Community.</description>
    <fields>
        <fullName>Community_Standard_ProfileID__c</fullName>
        <description>Represents the ID of the Profile assigned to User&apos;s that have indicated they would like to be part of the Community during the Registration Process.</description>
        <inlineHelpText>Represents the ID of the Profile assigned to User&apos;s that have indicated they would like to be part of the Community during the Registration Process.</inlineHelpText>
        <label>Community Standard ProfileID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Interest__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, the Registration process will NOT include the Interests registration page.</description>
        <inlineHelpText>When selected, the Registration process will NOT include the Interests registration page.</inlineHelpText>
        <label>Disable Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Picture_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Registration process will NOT include the Profile Picture page.</description>
        <inlineHelpText>When selected, the Registration process will NOT include the Profile Picture page.</inlineHelpText>
        <label>Disable Picture Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Registration process will be completely disabled and the User will land on the Default Home page upon Login.</description>
        <inlineHelpText>When selected, the Registration process will be completely disabled and the User will land on the Default Home page upon Login.</inlineHelpText>
        <label>Disable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Registration process will NOT include the Terms &amp; Conditions page.</description>
        <inlineHelpText>When selected, the Registration process will NOT include the Terms &amp; Conditions page.</inlineHelpText>
        <label>Disable T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_C_Published_Current_Date__c</fullName>
        <description>Represents when the last approved Terms &amp; Conditions document was published in the Community.  If a User accepted their T&amp;C before this date, they will be required to review and accept the Terms and Conditions again.</description>
        <inlineHelpText>Represents when the last approved Terms &amp; Conditions document was published in the Community.  If a User accepted their T&amp;C before this date, they will be required to review and accept the Terms and Conditions again.</inlineHelpText>
        <label>T&amp;C Published Current Date</label>
        <type>DateTime</type>
    </fields>
    <label>Community Registration</label>
</CustomObject>